modified file path

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Hello World</title>
     <script src="https://unpkg.com/vue"></script>
-    <script src="src/js/vue-select-group.js"></script>
+    <script src="/src/js/vue-select-group.js"></script>
   </head>
   <body>
     <div id="vue_root">
@@ -12,6 +12,6 @@
 			  <option is="select-group" v-for="(data, index) in datas" :key="index" :params="data"></option>
 			</select>
     </div>
-    <script src="src/js/data.js"></script>
+    <script src="/src/js/data.js"></script>
   </body>
 </html>
